--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="index.css">
 <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <html>
     <head>
         <title>My Webpage</title>
@@ -22,7 +25,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Education</a>
+						<a class="nav-link" href="education.html">Education</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Experiences</a>
@@ -39,11 +42,31 @@
 		<div class="container">
 			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">	
-					<div class="box">
+					<!--<div class="box">
 						<img id="avatar-photo" src="images/greenery.jpg" alt="Profile Picture">
 						<div style="width: 50px"></div>
 						<h1 id="motto">Live Life, Love Life</h1>
+					</div>-->
+					<!---->
+					<div class="box">
+						<div id="carouselSlidesOnly" class="carousel slide" data-ride="carousel">
+							<div class="carousel-inner">
+								<div class="carousel-item active">
+									<img src="images/greenery.jpg" class="d-block w-100" alt="...">
+								</div>
+								<div class="carousel-item">
+									<img src="images/china.jpg" class="d-block w-100" alt="...">
+								</div>
+								<div class="carousel-item">
+									<img src="images/autumnleaves.jpg" class="d-block w-100" alt="...">
+								</div>
+							</div>
+						</div>
+						<div style="width: 50px"></div>
+						<h1 id="motto">Live Life, Love Life</h1>
 					</div>
+						
+					<!---->
 					<div style="height: 30px"></div>
 					<h3 class="font-weight-light">Hi! I am Lim Kang Yee.</h3>
 					<p class="lead">I am a Computer Science student based in Singapore. 
@@ -60,7 +83,7 @@
 									<div class="card-body">
 										<h5 class="card-title">Education</h5>
 										<p class="card-text">Get to know my education journey, qualifications and projects so far.</p>
-										<a href="#" class="btn btn-primary">Learn more</a>
+										<a href="education.html" class="btn btn-primary">Learn more</a>
 									</div>
 								</div>
 							</div>
