--- a/education.html
+++ b/education.html
@@ -26,7 +26,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Experiences</a>
+						<a class="nav-link" href="experience.html">Experiences</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Contact Me</a>
