--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<a class="nav-link" href="education.html">Education</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Experiences</a>
+						<a class="nav-link" href="experience.html">Experiences</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Contact Me</a>
@@ -41,7 +41,35 @@
     <body>
 		<div class="container">
 			<div class="card border-0 shadow my-5">
-				<div class="card-body p-5">	
+				<div class="card-body p-5">
+					<div class="container">
+						<div class="row">
+							<div class="col-sm">
+								<div id="carouselSlidesOnly" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner">
+								<div class="carousel-item active">
+									<img src="images/greenery.jpg" class="d-block w-100" alt="...">
+								</div>
+								<div class="carousel-item">
+									<img src="images/china.jpg" class="d-block w-100" alt="...">
+								</div>
+								<div class="carousel-item">
+									<img src="images/autumnleaves.jpg" class="d-block w-100" alt="...">
+								</div>
+							</div>
+						</div>
+							</div>
+							<div class="col-7">
+								<h1 class="writing">"Live Life, Love Life"</h1>
+							<div style="height:30px"></div>
+							<p class="lead">Hi! I am Lim Kang Yee. I am a Computer Science student based in Singapore.
+							I aspire to become a software engineer to be able to help solve real-world problems
+							with industry-driven solutions. I love interacting with others because I am interested 
+							in social issues and the different perspectives that people with different experiences
+							can share. I hope to be able to bring about positive changes in the future through my work.</p>
+							</div>
+						</div>
+					</div>
 					<div class="box">
 						<div id="carouselSlidesOnly" class="carousel slide" data-ride="carousel">
 							<div class="carousel-inner">
@@ -56,17 +84,20 @@
 								</div>
 							</div>
 						</div>
-						<div style="width: 50px"></div>
-						<h1 id="motto">Live Life, Love Life</h1>
+						<div style="width: 100px"></div>
+						<div>
+							<h1 class="writing">"Live Life, Love Life"</h1>
+							<div style="height:30px"></div>
+							<p class="lead">Hi! I am Lim Kang Yee. I am a Computer Science student based in Singapore.
+							I aspire to become a software engineer to be able to help solve real-world problems
+							with industry-driven solutions. I love interacting with others because I am interested 
+							in social issues and the different perspectives that people with different experiences
+							can share. I hope to be able to bring about positive changes in the future through my work.</p>
+						</div>
 					</div>
-				
 					<div style="height: 30px"></div>
-					<h3 class="font-weight-light">Hi! I am Lim Kang Yee.</h3>
-					<p class="lead">I am a Computer Science student based in Singapore. 
-					I aspire to become a software engineer to be able to help solve real-world problems
-					with industry-driven solutions. I love interacting with others because I am interested 
-					in social issues and the different perspectives that people with different experiences
-					can share. I hope to be able to bring about positive changes in the future through my work.</p>
+					<h3 class="font-weight-light">dbewceb.</h3>
+						<p class="lead">blakrbevkricr sfneorbf.</p>
 					<div style="height: 30px"></div>
 					<div class="container">
 						<div class="row">
@@ -75,7 +106,7 @@
 									<img src="images/work.png" class="card-img-top" alt="Education">
 									<div class="card-body">
 										<h5 class="card-title">Education</h5>
-										<p class="card-text">Get to know my education journey, qualifications and projects so far.</p>
+										<p class="card-text">Get to know my education journey, qualifications and school experiences so far.</p>
 										<a href="education.html" class="btn btn-primary">Learn more</a>
 									</div>
 								</div>
