Changed intro text.

--- a/index.html
+++ b/index.html
@@ -60,44 +60,23 @@
 						</div>
 							</div>
 							<div class="col-7">
+								<div style="height:50px"></div>
 								<h1 class="writing">"Live Life, Love Life"</h1>
-							<div style="height:30px"></div>
-							<p class="lead">Hi! I am Lim Kang Yee. I am a Computer Science student based in Singapore.
-							I aspire to become a software engineer to be able to help solve real-world problems
-							with industry-driven solutions. I love interacting with others because I am interested 
-							in social issues and the different perspectives that people with different experiences
-							can share. I hope to be able to bring about positive changes in the future through my work.</p>
+								<div style="height:30px"></div>
+								<p class="lead">Hi! I am Lim Kang Yee. I am a Computer Science student based in Singapore.
+								I aspire to become a software engineer to be able to help solve real-world problems
+								with industry-driven solutions. I love interacting with others because I am interested 
+								in the different perspectives that people with different experiences
+								can bring to the conversation. I hope to be able to bring about positive changes in the future through my work 
+								and live by my motto, to live a life that I love and to love the life that live.</p>
 							</div>
 						</div>
 					</div>
-					<div class="box">
-						<div id="carouselSlidesOnly" class="carousel slide" data-ride="carousel">
-							<div class="carousel-inner">
-								<div class="carousel-item active">
-									<img src="images/greenery.jpg" class="d-block w-100" alt="...">
-								</div>
-								<div class="carousel-item">
-									<img src="images/china.jpg" class="d-block w-100" alt="...">
-								</div>
-								<div class="carousel-item">
-									<img src="images/autumnleaves.jpg" class="d-block w-100" alt="...">
-								</div>
-							</div>
-						</div>
-						<div style="width: 100px"></div>
-						<div>
-							<h1 class="writing">"Live Life, Love Life"</h1>
-							<div style="height:30px"></div>
-							<p class="lead">Hi! I am Lim Kang Yee. I am a Computer Science student based in Singapore.
-							I aspire to become a software engineer to be able to help solve real-world problems
-							with industry-driven solutions. I love interacting with others because I am interested 
-							in social issues and the different perspectives that people with different experiences
-							can share. I hope to be able to bring about positive changes in the future through my work.</p>
-						</div>
-					</div>
-					<div style="height: 30px"></div>
-					<h3 class="font-weight-light">dbewceb.</h3>
-						<p class="lead">blakrbevkricr sfneorbf.</p>
+					<div style="height: 50px"></div>
+					<h3 class="font-weight-light">Learn more about me on this site.</h3>
+						<p class="lead">Here I have featured my academic endeavours and qualifications but I believe I also have many other qualities to offer. 
+						These qualities have been honed through my various experiences which I have also detailed here. 
+						Feel free to reach out to me because I would love to hear from you!</p>
 					<div style="height: 30px"></div>
 					<div class="container">
 						<div class="row">
@@ -117,7 +96,7 @@
 									<div class="card-body">
 										<h5 class="card-title">Experiences</h5>
 										<p class="card-text">Get to know my experiences in co-cirricular activities beyond my academic work.</p>
-										<a href="#" class="btn btn-primary">Learn more</a>
+										<a href="experience.html" class="btn btn-primary">Learn more</a>
 									</div>
 								</div>
 							</div>
