--- a/illuminatesg.html
+++ b/illuminatesg.html
@@ -2,10 +2,13 @@
 <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="illuminatesg.css">
 <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
 <html>
     <head>
         <title>My Webpage</title>
@@ -43,13 +46,42 @@
 			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">	
 				<h2 class="font-weight-light">IlluminateSG</h2>
-				<p class="lead">I enjoyed my time in Kong Hwa School where they nurtured the 
-				appreciation of Chinese culture from a young age so that we would understand our 
-				roots as Chinese. I was exposed to Chinese calligrpahy and painting as well as Chinese
-				tea art. We were also given opportunities to learn beyond our syllabus such as subjects like 
-				English literature through books like Charlotte's Web and Lord of the Flies. Overall, 
-				I performed well for my PSLE and was able to enter my desired Secondary school as well.</p>
-				</div>		
+				<div style="height:50px"></div>
+				<h3 class="writing">"Try to see things differently - It's the only way to get a clearer perspective on the world and on your life"</h3>
+				<p class="lead">IlluminateSG is a project under Social Impact Catalyst NUS which is a club that focuses on social entrepreneurship. 
+				Our aim as IlluminateSG is to spark meaningful conversations on pressing social issues amongst youths in Singapore. Currently, we have
+				organised 2 of our flagship events called 'Common Space' where we bring together different people and guest experts to share on certain topics.
+				The topics of the 2 'Common Space' events were 'Education Inequality' and 'Mental Health'.</p>
+				<p class="lead">We are still exploring how we can ensure that our events are sustainable through a revenue stream such that our project can work
+				more like a social enterprise and further our cause. We are currently under a grant by the National Youth Council under the Young Change Makers
+				program.</p>
+				<p class="lead">I am part of the Marketing team where I am the head of content creation. I overlook specifically at the content we create 
+				for our social media sites,
+				our website where we share blogs and our marketing material for our events like posters and banners. I am incredibley delighted to be working with
+				amazing group mates, especially the marketing team that is filled with talented individuals. Although we have our positions, we work on a flat
+				hierarchy so that everyone is able to comfortably voice out opinions and be part of decision making. My marketing team mates include Raihana, a year 3 
+				marketing student in NUS who is also our head of public relations, Samihah, a year 2 political science student in NUS who is our head writer for our blogs,
+				Wei Ming, a year 1 computer science student in NUS who is in charge of our website and graphic design as well as Darima, a year 2 arts student in NUS who is our
+				lead in designing content for our social media sites.</p>
+
+				<h5 class="font-weight-light">Connect with us and checkout more of our work here:</h5>
+				<div style="height:10px"></div>
+
+				<!--Social Media Icons -->
+				<div class="box">
+					
+					<a class="fa fa-instagram fa-lg" style="user-select: auto;" href="https://www.instagram.com/illuminatesingapore/"></a>
+					<div style="width:20px"></div>
+					<a class="fa fa-facebook fa-lg" style="user-select: auto;" href="https://www.facebook.com/illuminatesingapore"></a>
+					<div style="width:20px"></div>
+					<a class="fa fa-globe fa-lg" style="user-select: auto;" href="https://www.illuminatesg.com/"></a>
+					<div style="width:20px"></div>
+					<a class="fa fa-linkedin fa-lg" style="user-select: auto;" href="https://www.linkedin.com/company/illuminatesg"></a>
+					<div style="width:20px"></div>
+					<a class="fa fa-twitter fa-lg" style="user-select: auto;" href="https://twitter.com/Illuminate__Sg"></a>
+					<div style="width:20px"></div>
+				</div>	
+				</div>
 			</div>
 		</div>
     </body>
