--- a/experience.html
+++ b/experience.html
@@ -33,7 +33,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact Me</a>
+						<a class="nav-link" href="contactme.html">Contact Me</a>
 					</li>
 				</ul>
 			</div>
@@ -66,7 +66,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-sm">
+							<!--<div class="col-sm">
 								<div class="card" style="width: 18rem;">
 									<img src="images/tP.png" class="card-img-top" alt="Education">
 									<div class="card-body">
@@ -75,7 +75,7 @@
 										<a href="tP.html" class="btn btn-primary">Learn more</a>
 									</div>
 								</div>
-							</div>
+							</div>-->
 						</div>
 					</div>
 				</div>		
