--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<a class="nav-link" href="experience.html">Experiences</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact Me</a>
+						<a class="nav-link" href="contactme.html">Contact Me</a>
 					</li>
 				</ul>
 			</div>
@@ -106,7 +106,7 @@
 									<div class="card-body">
 										<h5 class="card-title">Contact me</h5>
 										<p class="card-text">Get in touch with me personally.</p>
-										<a href="#" class="btn btn-primary">Learn more</a>
+										<a href="contactme.html" class="btn btn-primary">Learn more</a>
 									</div>
 								</div>
 							</div>
