--- a/illuminatesg.html
+++ b/illuminatesg.html
@@ -35,7 +35,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact Me</a>
+						<a class="nav-link" href="contactme.html">Contact Me</a>
 					</li>
 				</ul>
 			</div>
@@ -44,8 +44,73 @@
 	 <body>
 		<div class="container">
 			<div class="card border-0 shadow my-5">
-				<div class="card-body p-5">	
-				<h2 class="font-weight-light">IlluminateSG</h2>
+				<div class="card-body p-5">
+				<h1 class="font-weight-light" style="text-align:center">IlluminateSG</h1>
+				<!--carousel-->
+				<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+					<li data-target="#carouselExampleCaptions" data-slide-to="5"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="carousel-item active">
+						<img style="height:700px" src="images/illuminatesg.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>The Team behind the events</h5>
+							<p>A part of the entire team.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img style="height:700px" src="images/ei1.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Common Space Series 1: Education Inequality</h5>
+							<p>All our amazing participants with the team.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img style="height:700px" src="images/ei5.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Common Space Series 1: Education Inequality</h5>
+							<p>Our guest from the Children's wishing well.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img style="height:700px" src="images/mh1.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Common Space Series 2: Mental Health</h5>
+							<p>All our amazing participants with the team.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img style="height:700px" src="images/event1.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Common Space Series 2: Mental Health</h5>
+							<p>Having our focus group discussions.</p>
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img style="height:700px" src="images/mh2.jpg" class="d-block w-100" alt="...">
+						<div class="carousel-caption d-none d-md-block">
+							<h5>Common Space Series 2: Mental Health</h5>
+							<p>Our project director teaching about the moral matrix.</p>
+						</div>
+					</div>
+				</div>
+					<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+				<!--description-->
+				
 				<div style="height:50px"></div>
 				<h3 class="writing">"Try to see things differently - It's the only way to get a clearer perspective on the world and on your life"</h3>
 				<p class="lead">IlluminateSG is a project under Social Impact Catalyst NUS which is a club that focuses on social entrepreneurship. 
