Added contact details.

--- a/education.html
+++ b/education.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">	
-				<h2 class="font-weight-light">Summary of my education journey</h2>
+				<h1 class="font-weight-light" style="text-align:center">Summary of my education journey</h1>
 				<div style="height: 30px"></div>
 				<table style="width:100%">
 					<colgroup>
@@ -75,7 +75,7 @@
 					</tr>					
 				</table>
 				<div style="height: 50px"></div>
-				<h2 class="font-weight-light">More details of my experiences in each school</h2>
+				<h1 class="font-weight-light">More details of my experiences in each school</h1>
 				<div style="height: 20px"></div>
 				<h3 class="font-weight-light">Kong Hwa School, 2006-2011</h3>
 				<p class="lead">I enjoyed my time in Kong Hwa School where they nurtured the 
