--- a/experience.html
+++ b/experience.html
@@ -43,7 +43,9 @@
     <body>
 		<div class="container">
 			<div class="card border-0 shadow my-5">
-				<div class="card-body p-5">	
+				<div class="card-body p-5">
+					<h1 class="font-weight-light" style="text-align:center">Some of my experiences</h1>	
+					<div style="height: 40px;"></div>
 					<div class="container">
 						<div class="row">
 							<div class="col-sm">
@@ -66,7 +68,7 @@
 									</div>
 								</div>
 							</div>
-							<!--<div class="col-sm">
+							<div class="col-sm">
 								<div class="card" style="width: 18rem;">
 									<img src="images/tP.png" class="card-img-top" alt="Education">
 									<div class="card-body">
@@ -75,7 +77,7 @@
 										<a href="tP.html" class="btn btn-primary">Learn more</a>
 									</div>
 								</div>
-							</div>-->
+							</div>
 						</div>
 					</div>
 				</div>		
