Edited spelling errors.

--- a/education.html
+++ b/education.html
@@ -114,7 +114,7 @@
 				<p class="lead">Currently, I am studying in NUS in the School of Computing. I have been given many opportunities
 				to learn about technology through events like AngelHack, BrainHack and through the modules we take.
 				I am also part of Social Impact Catalyst NUS under a project called IlluminateSG where we hope to 
-				spark conversations on pressing social issues for youths through our events and campaiging. In IlluminateSG, 
+				spark conversations on pressing social issues for youths through our events and campaigning. In IlluminateSG, 
 				I work as the Head of Content Creation for the Marketing team. During my time in NUS, I also interned at
 				DSO during my summer in the first year.</p>
 				<div style="height: 30px"></div>
