Fixed broken image link.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 							</div>
 							<div class="col-sm">
 								<div class="card" style="width: 18rem;">
-									<img src="images/event.jpg" class="card-img-top" alt="Education">
+									<img src="images/event.JPG" class="card-img-top" alt="Education">
 									<div class="card-body">
 										<h5 class="card-title">Experiences</h5>
 										<p class="card-text">Get to know my experiences in co-cirricular activities beyond my academic work.</p>
