Fixed broken image link.

--- a/illuminatesg.html
+++ b/illuminatesg.html
@@ -79,21 +79,21 @@
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/mh1.jpg" class="d-block w-100" alt="...">
+						<img style="height:700px" src="images/mh1.JPG" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Common Space Series 2: Mental Health</h5>
 							<p>All our amazing participants with the team.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/event1.jpg" class="d-block w-100" alt="...">
+						<img style="height:700px" src="images/event1.JPG" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Common Space Series 2: Mental Health</h5>
 							<p>Having our focus group discussions.</p>
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img style="height:700px" src="images/mh2.jpg" class="d-block w-100" alt="...">
+						<img style="height:700px" src="images/mh2.JPG" class="d-block w-100" alt="...">
 						<div class="carousel-caption d-none d-md-block">
 							<h5>Common Space Series 2: Mental Health</h5>
 							<p>Our project director teaching about the moral matrix.</p>
