--- a/contactme.html
+++ b/contactme.html
@@ -51,11 +51,19 @@
 					<p class="lead">I would love to hear from you! As I have mentioned, I love interacting with others and having meaningful conversations. 
 					These can be about my past experiences, about IlluminateSG or to learn more about my school life. Do drop me a direct message or email me.</p>
 				<div class="box">
+					<div>
 					<a class="fa fa-instagram fa-lg" style="user-select: auto;" href="https://www.instagram.com/kangggyeee/"></a>
+					</div>
 					<div style="width:20px"></div>
+					<div>
 					<a class="fa fa-linkedin fa-lg" style="user-select: auto;" href="https://www.linkedin.com/in/lim-kang-yee/"></a>
+					</div>
 					<div style="width:20px"></div>
-					<i class="fa fa-envelope fa-lg" style="user-select: auto;"></i><div style="width:5px;"></div>: kangyee@comp.nus.edu.sg
+					<div>
+					<i class="fa fa-envelope fa-lg" style="user-select: auto;"></i>
+					</div>
+					<div style="width:5px;"></div>
+					<div>: kangyee@comp.nus.edu.sg</div>
 					<div style="width:20px"></div>
 				</div>	
 				</div>		
