--- a/education.html
+++ b/education.html
@@ -78,7 +78,7 @@
 					</tr>					
 				</table>
 				<div style="height: 50px"></div>
-				<h1 class="font-weight-light">More details of my experiences in each school</h1>
+				<h1 class="font-weight-light" style="text-align:center">More details of my experiences in each school</h1>
 				<div style="height: 20px"></div>
 				<h3 class="font-weight-light">Kong Hwa School, 2006-2011</h3>
 				<p class="lead">I enjoyed my time in Kong Hwa School where they nurtured the 
