Added content for suzhou page.

--- a/contactme.html
+++ b/contactme.html
@@ -57,15 +57,15 @@
 					<div style="width:20px"></div>
 					<div>
 					<a class="fa fa-linkedin fa-lg" style="user-select: auto;" href="https://www.linkedin.com/in/lim-kang-yee/"></a>
-					</div>
-					<div style="width:20px"></div>
-					<div>
+					</div>					
+				</div>
+				<div style="height:20px"></div>
+				<div class="box">
 					<i class="fa fa-envelope fa-lg" style="user-select: auto;"></i>
-					</div>
 					<div style="width:5px;"></div>
 					<div>: kangyee@comp.nus.edu.sg</div>
 					<div style="width:20px"></div>
-				</div>	
+				</div>
 				</div>		
 			</div>
 		</div>
