--- a/education.html
+++ b/education.html
@@ -84,7 +84,7 @@
 				<p class="lead">I enjoyed my time in Kong Hwa School where they nurtured the 
 				appreciation of Chinese culture from a young age so that we would understand our 
 				roots as Chinese. I was exposed to Chinese calligrpahy and painting as well as Chinese
-				tea art. We were also given opportunities to learn beyond our syllabus such as subjects like 
+				tea art. We were also given opportunities to learn beyond our syllabus with subjects like 
 				English literature through books like Charlotte's Web and Lord of the Flies. Overall, 
 				I performed well for my PSLE and was able to enter my desired Secondary school as well.</p>
 				<div style="height: 20px"></div>
