Added minor styling.

--- a/contactme.html
+++ b/contactme.html
@@ -27,7 +27,7 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="education.html">Education
-						
+
 						</a>
 					</li>
 					<li class="nav-item">
@@ -42,13 +42,13 @@
 			</div>
 		</div>
 	</nav>
-    
+
     <body>
 		<div class="container">
-			<div class="card border-0 shadow my-5">	
+			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">
-				<h1 class="font-weight-light" style="text-align:center">Contact me</h1>
-					<p class="lead">I would love to hear from you! As I have mentioned, I love interacting with others and having meaningful conversations. 
+				<h1 class="font-weight-light" style="text-align:center"><span class="u--highlight">Contact me</span></h1>
+					<p class="lead">I would love to hear from you! As I have mentioned, I love interacting with others and having meaningful conversations.
 					These can be about my past experiences, about IlluminateSG or to learn more about my school life. Do drop me a direct message or email me.</p>
 				<div class="box">
 					<div>
@@ -57,7 +57,7 @@
 					<div style="width:20px"></div>
 					<div>
 					<a class="fa fa-linkedin fa-lg" style="user-select: auto;" href="https://www.linkedin.com/in/lim-kang-yee/"></a>
-					</div>					
+					</div>
 				</div>
 				<div style="height:20px"></div>
 				<div class="box">
@@ -66,7 +66,7 @@
 					<div>: kangyee@comp.nus.edu.sg</div>
 					<div style="width:20px"></div>
 				</div>
-				</div>		
+				</div>
 			</div>
 		</div>
     </body>
