--- a/experience.html
+++ b/experience.html
@@ -24,7 +24,7 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="education.html">Education
-						
+
 						</a>
 					</li>
 					<li class="nav-item active">
@@ -39,12 +39,12 @@
 			</div>
 		</div>
 	</nav>
-    
+
     <body>
 		<div class="container">
 			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">
-					<h1 class="font-weight-light" style="text-align:center">Some of my experiences</h1>	
+					<h1 class="font-weight-light" style="text-align:center"><span class="u--highlight">Some of my experiences</span></h1>	
 					<div style="height: 40px;"></div>
 					<div class="container">
 						<div class="row">
@@ -80,7 +80,7 @@
 							</div>
 						</div>
 					</div>
-				</div>		
+				</div>
 			</div>
 		</div>
     </body>
