--- a/index.html
+++ b/index.html
@@ -38,81 +38,79 @@
 		</div>
 	</nav>
     <body>
-		<div class="container">
-			<div class="card border-0 shadow my-5">
-				<div class="card-body p-5">
-					<div class="container">
-						<div class="row">
-							<div class="col-sm">
-								<div id="carouselSlidesOnly" class="carousel slide" data-ride="carousel">
-								<div class="carousel-inner">
-								<div class="carousel-item active">
-									<img src="images/greenery.jpg" class="d-block w-100" alt="...">
-								</div>
-								<div class="carousel-item">
-									<img src="images/china.jpg" class="d-block w-100" alt="...">
-								</div>
-								<div class="carousel-item">
-									<img src="images/autumnleaves.jpg" class="d-block w-100" alt="...">
-								</div>
-							</div>
-						</div>
-							</div>
-							<div class="col-7">
-								<div style="height:50px"></div>
-								<h1 class="writing">"Live Life, Love Life"</h1>
-								<div style="height:30px"></div>
-								<p class="lead">Hi! I am Lim Kang Yee. I am a Computer Science student based in Singapore.
-								I aspire to become a software engineer to be able to help solve real-world problems
-								with industry-driven solutions. I love interacting with others because I am interested 
-								in the different perspectives that people with different experiences
-								can bring to the conversation. I hope to be able to bring about positive changes in the future through my work 
-								and live by my motto, to live a life that I love and to love the life that live.</p>
-							</div>
-						</div>
-					</div>
-					<div style="height: 50px"></div>
-					<h3 class="font-weight-light">Learn more about me on this site.</h3>
-						<p class="lead">Here I have featured my academic endeavours and qualifications but I believe I also have many other qualities to offer. 
-						These qualities have been honed through my various experiences which I have also detailed here. 
-						Feel free to reach out to me because I would love to hear from you!</p>
-					<div style="height: 30px"></div>
-					<div class="container">
-						<div class="row">
-							<div class="col-sm">
-								<div class="card" style="width: 18rem;">
-									<img src="images/work.png" class="card-img-top" alt="Education">
-									<div class="card-body">
-										<h5 class="card-title">Education</h5>
-										<p class="card-text">Get to know my education journey, qualifications and school experiences so far.</p>
-										<a href="education.html" class="btn btn-primary">Learn more</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm">
-								<div class="card" style="width: 18rem;">
-									<img src="images/event.JPG" class="card-img-top" alt="Education">
-									<div class="card-body">
-										<h5 class="card-title">Experiences</h5>
-										<p class="card-text">Get to know my experiences in co-cirricular activities beyond my academic work.</p>
-										<a href="experience.html" class="btn btn-primary">Learn more</a>
-									</div>
-								</div>
-							</div>
-							<div class="col-sm">
-								<div class="card" style="width: 18rem;">
-									<img src="images/contactme1.png" class="card-img-top" alt="Education">
-									<div class="card-body">
-										<h5 class="card-title">Contact me</h5>
-										<p class="card-text">Get in touch with me personally.</p>
-										<a href="contactme.html" class="btn btn-primary">Learn more</a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+      <div class="container" id="main-container">
+        <div class="card border-0 shadow my-5">
+          <div class="card-body p-5">
+            <div class="container" id="top-content">
+              <div class="row">
+                <div class="col-sm" id="carousel-col">
+                  <div id="carouselSlidesOnly" class="carousel slide" data-ride="carousel">
+                  <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="images/greenery.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/china.jpg" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="images/autumnleaves.jpg" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+              </div>
+                </div>
+                <div class="col-7 my-auto">
+                  <h1 class="writing"><span class="u--highlight">"Live Life, Love Life"</span></h1>
+                  <div style="height:30px"></div>
+                  <p class="lead">Hi! I am <span class="u--highlight" id="smaller-highlight">Lim Kang Yee</span>. I am a Computer Science student from
+                  the National University of Singapore.
+                  I aspire to become a software engineer to be able to help solve real-world problems
+                  with industry-driven solutions. I love interacting with others because I am interested
+                  in the different perspectives that people with different experiences
+                  can bring to the conversation. I hope to be able to bring about positive changes in the future through my work
+                  and live by my motto, to live a life that I love and to love the life that live.</p>
+                </div>
+              </div>
+            </div>
+            <h3 class="font-weight-light" style="margin-top:50px"><span class="u--highlight">Learn more about me on this site.</span></h3>
+              <p class="lead">Here I have featured my academic endeavours and qualifications but I believe I also have many other qualities to offer.
+              These qualities have been honed through my various experiences and projects which I have also detailed here.</p>
+            <div style="height: 30px"></div>
+            <div class="container">
+              <div class="row">
+                <div class="col-sm">
+                  <div class="card" style="width: 18rem;">
+                    <img src="images/work.png" class="card-img-top" alt="Education">
+                    <div class="card-body">
+                      <h5 class="card-title">Education</h5>
+                      <p class="card-text">Get to know my education journey, qualifications and school experiences so far.</p>
+                      <a href="education.html" class="btn btn-primary">Learn more</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <div class="card" style="width: 18rem;">
+                    <img src="images/event.JPG" class="card-img-top" alt="Experiences">
+                    <div class="card-body">
+                      <h5 class="card-title">Experiences</h5>
+                      <p class="card-text">Get to know my experiences in co-cirricular activities, internships and projects.</p>
+                      <a href="experience.html" class="btn btn-primary">Learn more</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <div class="card" style="width: 18rem;">
+                    <img src="images/contactme1.png" class="card-img-top" alt="Contact">
+                    <div class="card-body">
+                      <h5 class="card-title">Contact me</h5>
+                      <p class="card-text">Get in touch with me personally.</p>
+                      <a href="contactme.html" class="btn btn-primary">Learn more</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </body>
 </html>
