Updated styling and experiences.

--- a/contactme.html
+++ b/contactme.html
@@ -58,6 +58,9 @@
 					<div>
 					<a class="fa fa-linkedin fa-lg" style="user-select: auto;" href="https://www.linkedin.com/in/lim-kang-yee/"></a>
 					</div>
+          <div style="margin-left:20px;">
+            <a class="fa fa-github fa-lg" style="user-select: auto;" href="https://github.com/kangyeelim"></a>
+          </div>
 				</div>
 				<div style="height:20px"></div>
 				<div class="box">
