--- a/react.html
+++ b/react.html
@@ -45,16 +45,26 @@
 		<div class="container">
 			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">
-          <h1 class="font-weight-light" style="text-align:center"><span class="u--highlight">treasurerPro Desktop App</span></h1>
-          <img style="height:700px" src="images/tP.png" class="d-block w-100" alt="...">
-  				<p class="lead">This is a project I did with 4 other team mates in the Software Engineering module CS2103T. We were tasked
-          to create a command line interface application using Java and JavaFX that makes use of Travis CI. We were allowed to either morph an existing
-          Addressbook application or extend it. We chose to morph it to be part of our application
-          which helps to allow treasurers to key in data to store and keep track of reimbursements, inventory and member information.
-          It also allows budgeting and planning of expenses with simple visualisations of data. The application does not use databases but
-          can be easily extended to do so and is currently using json and text files to store the data.</p>
-  				<h5 class="font-weight-light">Check out the repository for it here:</h5>
-  				<a class="fa fa-github fa-lg" style="user-select: auto; margin-top:10px;" href="https://github.com/kangyeelim/main"></a>
+  				<h1 class="font-weight-light" style="text-align:center; margin-bottom:30px;"><span class="u--highlight">React Web Applications</span></h1>
+          <p class="lead" style="margin-bottom:30px;">These are projects that I started on when I started my self-learning journey on web application development using the
+          React framework.</p>
+          <h3 class="font-weight-light" style="text-align:center; margin-bottom:30px;"><span class="u--highlight" id="smaller-highlight">Fanclub Community</span></h3>
+          <img style="height:600px" src="images/fan.png" class="d-block w-100" alt="...">
+  				<!--description-->
+  				<p class="lead">This is a fanclub community website that allows users to sign in using their Google account to make posts in the Community Tab so that they can
+            buy, sell or share merchandise related to the artist. To identify people as true fans, they can take a quiz which upon completion allows them to input their
+            social media account username in the Hall of Fame Tab so that others can verify their identity as true fans and not scalpers or scammers. There is a page that allows
+            listening to music and searching of song lyrics as well. The music tabs uses Deezer's music player widget and some APIs from various sources for retrieving song lyrics.
+            This project is made with the MongoDB, Express, React, Nodejs (MERN) stack along with React Redux. The images for posts are uploaded and hosted on Cloudinary and all the data are stored using MongoDB.
+            I also made use of tensorflow's toxicity model for natural language processing to check for hate speech in the text for posts and a node module for images to check for
+            obscene images which are removed from the Community Tab. To improve the performance of the loading of posts, a virtualised list node module was used as well. Lastly,
+            React Spring was used to create simple animations of elements.</p>
+          <h5 class="font-weight-light">Check out the repository for it here:</h5>
+  				<div style="height:10px"></div>
+  				<!--Social Media Icons -->
+  				<div class="box">
+  					<a class="fa fa-github fa-lg" style="user-select: auto;" href="https://github.com/kangyeelim/fan-verifier"></a>
+  				</div>
 				</div>
 			</div>
 		</div>
