--- a/suzhou.html
+++ b/suzhou.html
@@ -27,7 +27,7 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="education.html">Education
-						
+
 						</a>
 					</li>
 					<li class="nav-item">
@@ -45,7 +45,7 @@
 		<div class="container">
 			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">
-				<h1 class="font-weight-light" style="text-align:center">Suzhou Winter Trip</h1>
+				<h1 class="font-weight-light" style="text-align:center; margin-bottom:30px;"><span class="u--highlight">Suzhou Winter Trip</span></h1>
 				<!--carousel-->
 				<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 				<ol class="carousel-indicators">
@@ -102,14 +102,17 @@
 					</a>
 				</div>
 				<!--description-->
-				
+
 				<div style="height:50px"></div>
 				<h3 class="writing">"Let China Sleep, for when she wakes, she will shake the world," - Napoleon Bonaparte</h3>
 				<p class="lead">During my winter break in year 2, I went on a 1 month immersion trip to Suzhou, China where
 				we learnt about the history of that area, the business environment in China and how their different businesses work. There I had
 				lessons in the NUSRI Suzhou campus with different guest professors from the local universities there. We were tasked
-				with assignments which required us to study various types of businesses and present it to the class as groups.</p>
-				<p class="lead">We were given opportunities to go on industrial visits to places like the Huawei R&D centre, Bank of China HQ in Suzhou, 
+				with case-study assignments which required us to study various types of businesses and present it to the class as groups. After the trip,
+        we also had to do a comprehensive 9 to 10 page final report on the topic of 'The rise of China' where we focused on any of the 3 areas of
+        China's soft power, 'A New World Order' or 'community with a shared future for mankind', a concept delivered by former
+        Chinese Communist Party general secretary Hu Jintao and advocated by current general secretary Xi Jinping.</p>
+				<p class="lead">We were given opportunities to go on industrial visits to places like the Huawei R&D centre, Bank of China HQ in Suzhou,
 				Dream Village in Hangzhou and other tech companies. There we were exposed to how China is developing technology to become
 				the next tech leader of the world and how they believe it can help them acheive sustainable economic growth. It was indeed
 				an eye-opening experience for me. Besides the industrial visits where I felt how technologically advanced Shanghai, Suzhou and Hangzhou were,
@@ -118,13 +121,12 @@
 				applications like Google Maps etc were blocked there, I managed to use the applications that the locals used and was also
 				pleasantly surprised that the user experience was great and I would say comparable or even better than the applications I used
 				back in Singapore without the firewall.</p>
-				<p class="lead">We were also exposed to the Chinese culture there. We did Chinese painting on fans, visited museums 
+				<p class="lead">We were also exposed to the Chinese culture there. We did Chinese painting on fans, visited museums
 				and went to view and learn about the unique Chinese Garderns there. I believe Suzhou and Hangzhou is like the 'Kyoto'
-				of China. The city of Suzhou were I spent most of my days in was beautifully planned such that there were many old but 
+				of China. The city of Suzhou were I spent most of my days in was beautifully planned such that there were many old but
 				well-maintained Chinese architecture
 				which gave the cities a very calming and refreshing vibe. The cities were also very clean and green. The people we
-				met there were also very friendly and hospitable. If anyone ever has some negative stereotypes about Chinese people or China,
-				I believe a visit to Shanghai, Suzhou or Hangzhou will greatly change their hearts and broaden their minds about the place
+				met there were also very friendly and hospitable. I believe a visit to Shanghai, Suzhou or Hangzhou will greatly broaden their minds about the place
 				and its people. Do contact me if you are interested to learn more about the trip and this module CH2393 which is the module
 				that offers this winter program.</p>
 				</div>
