--- a/education.html
+++ b/education.html
@@ -77,47 +77,42 @@
 						<td>Bachelors of Computing in Computer Science (Honours)</td>
 					</tr>
 				</table>
+          <section class="info">
 							<h2 class="font-weight-light" style="margin-top:50px"><span class="u--highlight">More details of my experiences in each school</span></h2>
-							<h3 class="font-weight-light" style="margin-top:20px"><span class="u--highlight" id="smaller-highlight">Kong Hwa School, 2006-2011</span></h3>
-							<p class="lead">I enjoyed my time in Kong Hwa School where they nurtured the
-							appreciation of Chinese culture from a young age so that we would understand our
-							roots as Chinese. I was exposed to Chinese calligrpahy and painting as well as Chinese
+							<h3 class="font-weight-light" style="margin-top:20px; margin-bottom:-20px;"><span class="u--highlight" id="smaller-highlight">Kong Hwa School, 2006-2011</span></h3>
+							<p class="lead">In Kong Hwa School, they nurtured students'
+							appreciation of Chinese culture from a young age. I was exposed to Chinese calligrpahy and painting, Chinese musical instruments as well as Chinese
 							tea art. We were also given opportunities to learn beyond our syllabus with subjects like
-							English literature through books like Charlotte's Web and Lord of the Flies. Overall,
-							I performed well for my PSLE and was able to enter my desired Secondary school as well.</p>
-							<h3 class="font-weight-light" style="margin-top:20px"><span class="u--highlight" id="smaller-highlight">Chung Cheng High School (Main), 2012-2015</span></h3>
-							<p class="lead">My time in Chung Cheng High School (CCHMS) was very enriching. Similar to
-							Kong Hwa School, I was further exposed to Chinese culture as CCHMS was the centre of excellence
-							for Chinese Culture in the East Zone. There I continued learning Chinese calligraphy with bi-weekly
-							lessons, as well as a subject called 'Appreciation of Chinese Culture' which also consisted of
+							English literature through books like Charlotte's Web and Lord of the Flies.</p>
+							<h3 class="font-weight-light" style="margin-top:20px; margin-bottom:-20px;"><span class="u--highlight" id="smaller-highlight">Chung Cheng High School (Main), 2012-2015</span></h3>
+							<p class="lead">Chung Cheng High School (CCHMS) gave me a very enriching experience. I was further
+              exposed to Chinese culture as CCHMS was the centre of excellence
+							for Chinese Culture in the East Zone. I learnt more Chinese calligraphy with bi-weekly
+							lessons, as well as a subject called 'Appreciation of Chinese Culture' which consisted of
 							bi-weekly lessons where we learnt about ancient Chinese folklore, Chinese tea art as well as
-							some of Chinese history. We were also exposed to the Malay Language as part of our curriculum.
+							some Chinese history. We were also exposed to the Malay Language as part of our curriculum.
 							I was part of the Art Club in CCHMS because of my interests in it. There I was given many
-							opportunities to try out different art forms like clay sculture making, street art, watercolour etc.
-							Besides ensuring we are culturally educated, we were also encouraged to engage in physical activities
-							like camps. Our Secondary 3 Resilience Camp was one of the toughest but fulfilling camps we had where
-							we camped in Malaysia in the outdoors. There, we went hiking to a waterfall and engaged in activities like
-							absailing and rock-climbing.</p>
-							<h3 class="font-weight-light" style="margin-top:20px"><span class="u--highlight" id="smaller-highlight">Victoria Junior College, 2016-2017</span></h3>
+							opportunities to try out different art forms like clay sculpture making, street art, watercolour etc.
+							We were also encouraged to engage in physical activities
+							like camps and were taught Wushu, a Chinese martial art form.</p>
+							<h3 class="font-weight-light" style="margin-top:20px; margin-bottom:-20px;"><span class="u--highlight" id="smaller-highlight">Victoria Junior College, 2016-2017</span></h3>
 							<p class="lead">My short 2 years in Victoria Junior College (VJC) was incredibly hectic but fulfilling as well.
 							I was part of VJC's Interact Club which is under Roteract Club Singapore. We participated in many activies
 							and events that contributed back to the community through volunteerism or organising of events. I was given
 							the opportunity to be part of the organising committee for 'Community Affair' in VJC which is an annual event
 							to get the school community to give back to society. I also volunteered in many events like Walk for Rice by NTUC, a Clothes Drive, a Food drive for Foodbank Singapore, etc.
-							Besides, I was extremely proud that I was also able to acheive academic excellence and became one of the students
+							I was extremely proud that I was also able to acheive academic excellence and became one of the top scorers
 							to acheive 7 A'level distinctions.</p>
-							<div style="height: 20px"></div>
-
-							<h3 class="font-weight-light"><span class="u--highlight" id="smaller-highlight">National University of Singapore, 2018-present</span></h3>
-							<p class="lead">Currently, I am studying in NUS in the School of Computing. I have been given many opportunities
-							to learn about technology through events like AngelHack, BrainHack and through the modules we take.
+							<h3 class="font-weight-light" style="margin-top: 20px; margin-bottom:-20px;"><span class="u--highlight" id="smaller-highlight">National University of Singapore, 2018-present</span></h3>
+							<p class="lead">Currently, I am studying in NUS, in the School of Computing. I have been given many opportunities
+							to learn about technology through events like AngelHack, BrainHack and through the various modules we take.
 							I am also part of Social Impact Catalyst NUS under a project called IlluminateSG where we hope to
 							spark conversations on pressing social issues for youths through our events and campaigning. In IlluminateSG,
 							I work as the Head of Content Creation for the Marketing team. During my time in NUS, I also interned at
-							DSO during my summer in the first year.</p>
-							<div style="height: 30px"></div>
-						</div>
+							DSO during my summer in the first year to gain more experience.</p>
+            </section>
 					</div>
-		</div>
+				</div>
+		  </div>
     </body>
 </html>
