--- a/react.html
+++ b/react.html
@@ -56,7 +56,7 @@
             social media account username in the Hall of Fame Tab so that others can verify their identity as true fans and not scalpers or scammers. There is a page that allows
             listening to music and searching of song lyrics as well. The music tabs uses Deezer's music player widget and some APIs from various sources for retrieving song lyrics.
             This project is made with the MongoDB, Express, React, Nodejs (MERN) stack along with React Redux. The images for posts are uploaded and hosted on Cloudinary and all the data are stored using MongoDB.
-            I also made use of tensorflow's toxicity model for natural language processing to check for hate speech in the text for posts and a node module for images to check for
+            I also made use of tensorflow's toxicity model node module for natural language processing to check for hate speech in the text for posts and a node module for images to check for
             obscene images which are removed from the Community Tab. To improve the performance of the loading of posts, a virtualised list node module was used as well. Lastly,
             React Spring was used to create simple animations of elements.</p>
           <h5 class="font-weight-light">Check out the repository for it here:</h5>
