--- a/education.html
+++ b/education.html
@@ -109,7 +109,9 @@
 							I am also part of Social Impact Catalyst NUS under a project called IlluminateSG where we hope to
 							spark conversations on pressing social issues for youths through our events and campaigning. In IlluminateSG,
 							I work as the Head of Content Creation for the Marketing team. During my time in NUS, I also interned at
-							DSO during my summer in the first year to gain more experience.</p>
+							DSO during my summer in the first year to gain more experience. With the skills I picked up through my Computer Science
+              modules, it allowed to me further my self-learning in web and mobile app development during my year 2 summer through my
+              own personal projects and online courses.</p>
             </section>
 					</div>
 				</div>
