--- a/experience.html
+++ b/experience.html
@@ -113,7 +113,7 @@
 									<img src="images/dso.png" class="card-img-top" alt="Education">
 									<div class="card-body">
 										<h5 class="card-title">Y1 Summer Internship</h5>
-										<p class="card-text">My experience in interning at DSO in Jun-Aug 2019.</p>
+										<p class="card-text">My experience interning at DSO in Jun-Aug 2019.</p>
 										<a href="dso.html" class="btn btn-primary">Learn more</a>
 									</div>
 								</div>
