--- a/pythonweb.html
+++ b/pythonweb.html
@@ -48,7 +48,7 @@
   				<h1 class="font-weight-light" style="text-align:center; margin-bottom:30px;"><span class="u--highlight">Flask/Django Web Applications</span></h1>
           <p class="lead" style="margin-bottom:30px;">These are projects that I started on when doing the course CS50 Web Programming with Python and Javascript by Harvard on EdX which focuses
           on the Flask and Django frameworks.</p>
-          <h3 class="font-weight-light" style="text-align:center; margin-bottom:30px;"<span class="u--highlight" id="smaller-highlight">Simple Book Review</span></h3>
+          <h3 class="font-weight-light" style="text-align:center; margin-bottom:30px;"><span class="u--highlight" id="smaller-highlight">Simple Book Review</span></h3>
           <img style="height:600px" src="images/bookreview.png" class="d-block w-100" alt="...">
   				<!--description-->
   				<p class="lead">This is a book review web application that allows users to login and make book reviews and rate books that they have read or find information on
